--- a/ch/index.html
+++ b/ch/index.html
@@ -203,7 +203,11 @@
 				</ul>
 			</div>
 			<section class="box box-table ledger" id="ledger">
-				
+				<div class="box-cell">
+					<h2 class="box-title ta-r">
+						Ledger
+					</h2>
+				</div>
 			</section>
 			<div class="bottom-panel">
 				<a href="https://t.me/pprotocol" class="bottom-panel-button"><span class="icon teleg-icon"></span></a>
@@ -255,35 +259,11 @@
 								</div>
 								<div class="team-slide">
 									<div class="team-image">
-										<img src="/images/man-image-5.png" alt="">
-									</div>
-									<a href="https://www.linkedin.com/in/julia-choi-b4a669189/" target="_blank" class="team-icon"><img src="/images/linked-icon.png" alt=""></a>
-									<div class="team-name">Julia Choi</div>
-									<div class="team-type">CMO</div>
-								</div>
-								<div class="team-slide">
-									<div class="team-image">
 										<img src="/images/man-image-8.png" alt="">
 									</div>
 									<a href="https://www.linkedin.com/in/ongjunhao" target="_blank" class="team-icon"><img src="/images/linked-icon.png" alt=""></a>
 									<div class="team-name">ONG Jun Hao</div>
 									<div class="team-type">Business Development Advisor (Singapore)</div>
-								</div>
-								<div class="team-slide">
-									<div class="team-image">
-										<img src="/images/man-image-7.png" alt="">
-									</div>
-									<!--<a href="" target="_blank" class="team-icon"><img src="/images/linked-icon.png" alt=""></a>-->
-									<div class="team-name">Eu Chan</div>
-									<div class="team-type">SMM manager</div>
-								</div>
-								<div class="team-slide">
-									<div class="team-image">
-										<img src="/images/man-image-1.png" alt="">
-									</div>
-									<a href="https://www.linkedin.com/in/alexrpro/" target="_blank" class="team-icon"><img src="/images/linked-icon.png" alt=""></a>
-									<div class="team-name">Alexander Richards</div>
-									<div class="team-type">Business Development Advisor (Korea)</div>
 								</div>
 								<div class="team-slide">
 									<div class="team-image">
@@ -295,11 +275,35 @@
 								</div>
 								<div class="team-slide">
 									<div class="team-image">
+										<img src="/images/man-image-1.png" alt="">
+									</div>
+									<a href="https://www.linkedin.com/in/alexrpro/" target="_blank" class="team-icon"><img src="/images/linked-icon.png" alt=""></a>
+									<div class="team-name">Alexander Richards</div>
+									<div class="team-type">Business Development Advisor (Korea)</div>
+								</div>
+								<div class="team-slide">
+									<div class="team-image">
 										<img src="/images/man-image-2.png" alt="">
 									</div>
 									<a href="https://www.linkedin.com/in/pichugin-ruslan-170a9641/" target="_blank" class="team-icon"><img src="/images/linked-icon.png" alt=""></a>
 									<div class="team-name">Ruslan Pichugin</div>
 									<div class="team-type">CTO(Chief Strategy Officer)</div>
+								</div>
+								<div class="team-slide">
+									<div class="team-image">
+										<img src="/images/man-image-5.png" alt="">
+									</div>
+									<a href="https://www.linkedin.com/in/julia-choi-b4a669189/" target="_blank" class="team-icon"><img src="/images/linked-icon.png" alt=""></a>
+									<div class="team-name">Julia Choi</div>
+									<div class="team-type">CMO</div>
+								</div>
+								<div class="team-slide">
+									<div class="team-image">
+										<img src="/images/man-image-7.png" alt="">
+									</div>
+									<!--<a href="" target="_blank" class="team-icon"><img src="/images/linked-icon.png" alt=""></a>-->
+									<div class="team-name">Eu Chan</div>
+									<div class="team-type">SMM manager</div>
 								</div>
 							</div>
 						</div>
