--- a/jp/index.html
+++ b/jp/index.html
@@ -204,7 +204,7 @@
 			</div>
 			<section class="box box-table ledger" id="ledger">
 				<div class="box-cell">
-					<h2 class="box-title ta-r">
+					<h2 class="box-title">
 						Ledger
 					</h2>
 				</div>
