--- a/jp/index.html
+++ b/jp/index.html
@@ -13,7 +13,7 @@
 
 	<link rel="stylesheet" href="/css/slick.css" media="all">
 	<link rel="stylesheet" href="/css/jquery.fancybox.min.css" media="all">
-	<link rel="stylesheet" href="/css/style.css?v28" media="all">
+	<link rel="stylesheet" href="/css/style.css?v29" media="all">
 
 	<!-- <Google Tag Manager -->
 	<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
@@ -187,7 +187,7 @@
 			</div>
 		</div>
 		<div class="colored-bg box-wrapper ledger-wrapper">
-			<div class="box-bg-image" style="background-image: url(/images/ledger-bg-image.jpg);"></div>
+			<div class="box-bg-image" style="background-image: url(/images/ledger-bg-image.jpg);"><img src="" alt="/images/ledger-bg-image.jpg"></div>
 			<div class="page-scroller-wrapper">
 				<ul class="page-scroller">
 					<li class="page-scroller-item"><a href="#main" class="page-scroller-link">Home</a></li>
@@ -1024,7 +1024,7 @@
 	<script src="/js/slick.min.js"></script>
 	<script src="/js/alfaNavbar.min.js"></script>
 	<script src="/js/jquery.fancybox.min.js"></script>
-	<script src="/js/scripts.js?v28"></script>
+	<script src="/js/scripts.js?v29"></script>
 
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-135733690-1"></script>
