--- a/jp/index.html
+++ b/jp/index.html
@@ -64,11 +64,11 @@
 				<ul class="page-scroller">
 					<li class="page-scroller-item"><a href="#main" class="page-scroller-link">主頁</a></li>
 					<li class="page-scroller-item"><a href="#about" class="page-scroller-link">約</a></li>
+					<li class="page-scroller-item"><a href="#ledger" class="page-scroller-link">Ledger</a></li>
 					<li class="page-scroller-item"><a href="#team" class="page-scroller-link">チーム</a></li>
 					<li class="page-scroller-item"><a href="#ambassadors" class="page-scroller-link">大使</a></li>
 					<li class="page-scroller-item"><a href="#news" class="page-scroller-link">ブログ</a></li>
 					<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">プロトコル</a></li>
-					<li class="page-scroller-item"><a href="#ledger" class="page-scroller-link">Ledger</a></li>
 					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">トークン買取</a></li>
 					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">道路地図</a></li>
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">社会的</a></li>
@@ -190,16 +190,16 @@
 			<div class="box-bg-image" style="background-image: url(/images/ledger-bg-image.jpg);"><img src="" alt="/images/ledger-bg-image.jpg"></div>
 			<div class="page-scroller-wrapper">
 				<ul class="page-scroller">
-					<li class="page-scroller-item"><a href="#main" class="page-scroller-link">Home</a></li>
-					<li class="page-scroller-item"><a href="#about" class="page-scroller-link">About</a></li>
-					<li class="page-scroller-item"><a href="#team" class="page-scroller-link">Team</a></li>
-					<li class="page-scroller-item"><a href="#ambassadors" class="page-scroller-link">Ambassadors</a></li>
-					<li class="page-scroller-item"><a href="#news" class="page-scroller-link">Blog</a></li>
-					<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">Protocol</a></li>
+					<li class="page-scroller-item"><a href="#main" class="page-scroller-link">主頁</a></li>
+					<li class="page-scroller-item"><a href="#about" class="page-scroller-link">約</a></li>
 					<li class="page-scroller-item"><a href="#ledger" class="page-scroller-link">Ledger</a></li>
-					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">Tokensale</a></li>
-					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">Roadmap</a></li>
-					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">Social</a></li>
+					<li class="page-scroller-item"><a href="#team" class="page-scroller-link">チーム</a></li>
+					<li class="page-scroller-item"><a href="#ambassadors" class="page-scroller-link">大使</a></li>
+					<li class="page-scroller-item"><a href="#news" class="page-scroller-link">ブログ</a></li>
+					<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">プロトコル</a></li>
+					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">トークン買取</a></li>
+					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">道路地図</a></li>
+					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">社会的</a></li>
 				</ul>
 			</div>
 			<section class="box box-table ledger" id="ledger">
@@ -219,11 +219,11 @@
 				<ul class="page-scroller">
 					<li class="page-scroller-item"><a href="#main" class="page-scroller-link">主頁</a></li>
 					<li class="page-scroller-item"><a href="#about" class="page-scroller-link">約</a></li>
+					<li class="page-scroller-item"><a href="#ledger" class="page-scroller-link">Ledger</a></li>
 					<li class="page-scroller-item"><a href="#team" class="page-scroller-link">チーム</a></li>
 					<li class="page-scroller-item"><a href="#ambassadors" class="page-scroller-link">大使</a></li>
 					<li class="page-scroller-item"><a href="#news" class="page-scroller-link">ブログ</a></li>
 					<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">プロトコル</a></li>
-					<li class="page-scroller-item"><a href="#ledger" class="page-scroller-link">Ledger</a></li>
 					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">トークン買取</a></li>
 					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">道路地図</a></li>
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">社会的</a></li>
@@ -395,11 +395,11 @@
 				<ul class="page-scroller">
 					<li class="page-scroller-item"><a href="#main" class="page-scroller-link">主頁</a></li>
 					<li class="page-scroller-item"><a href="#about" class="page-scroller-link">約</a></li>
+					<li class="page-scroller-item"><a href="#ledger" class="page-scroller-link">Ledger</a></li>
 					<li class="page-scroller-item"><a href="#team" class="page-scroller-link">チーム</a></li>
 					<li class="page-scroller-item"><a href="#ambassadors" class="page-scroller-link">大使</a></li>
 					<li class="page-scroller-item"><a href="#news" class="page-scroller-link">ブログ</a></li>
 					<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">プロトコル</a></li>
-					<li class="page-scroller-item"><a href="#ledger" class="page-scroller-link">Ledger</a></li>
 					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">トークン買取</a></li>
 					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">道路地図</a></li>
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">社会的</a></li>
@@ -537,11 +537,11 @@
 				<ul class="page-scroller">
 					<li class="page-scroller-item"><a href="#main" class="page-scroller-link">主頁</a></li>
 					<li class="page-scroller-item"><a href="#about" class="page-scroller-link">約</a></li>
+					<li class="page-scroller-item"><a href="#ledger" class="page-scroller-link">Ledger</a></li>
 					<li class="page-scroller-item"><a href="#team" class="page-scroller-link">チーム</a></li>
 					<li class="page-scroller-item"><a href="#ambassadors" class="page-scroller-link">大使</a></li>
 					<li class="page-scroller-item"><a href="#news" class="page-scroller-link">ブログ</a></li>
 					<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">プロトコル</a></li>
-					<li class="page-scroller-item"><a href="#ledger" class="page-scroller-link">Ledger</a></li>
 					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">トークン買取</a></li>
 					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">道路地図</a></li>
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">社会的</a></li>
@@ -623,11 +623,11 @@
 				<ul class="page-scroller">
 					<li class="page-scroller-item"><a href="#main" class="page-scroller-link">主頁</a></li>
 					<li class="page-scroller-item"><a href="#about" class="page-scroller-link">約</a></li>
+					<li class="page-scroller-item"><a href="#ledger" class="page-scroller-link">Ledger</a></li>
 					<li class="page-scroller-item"><a href="#team" class="page-scroller-link">チーム</a></li>
 					<li class="page-scroller-item"><a href="#ambassadors" class="page-scroller-link">大使</a></li>
 					<li class="page-scroller-item"><a href="#news" class="page-scroller-link">ブログ</a></li>
 					<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">プロトコル</a></li>
-					<li class="page-scroller-item"><a href="#ledger" class="page-scroller-link">Ledger</a></li>
 					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">トークン買取</a></li>
 					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">道路地図</a></li>
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">社会的</a></li>
@@ -690,11 +690,11 @@
 				<ul class="page-scroller">
 					<li class="page-scroller-item"><a href="#main" class="page-scroller-link">主頁</a></li>
 					<li class="page-scroller-item"><a href="#about" class="page-scroller-link">約</a></li>
+					<li class="page-scroller-item"><a href="#ledger" class="page-scroller-link">Ledger</a></li>
 					<li class="page-scroller-item"><a href="#team" class="page-scroller-link">チーム</a></li>
 					<li class="page-scroller-item"><a href="#ambassadors" class="page-scroller-link">大使</a></li>
 					<li class="page-scroller-item"><a href="#news" class="page-scroller-link">ブログ</a></li>
 					<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">プロトコル</a></li>
-					<li class="page-scroller-item"><a href="#ledger" class="page-scroller-link">Ledger</a></li>
 					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">トークン買取</a></li>
 					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">道路地図</a></li>
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">社会的</a></li>
@@ -758,11 +758,11 @@
 				<ul class="page-scroller">
 					<li class="page-scroller-item"><a href="#main" class="page-scroller-link">主頁</a></li>
 					<li class="page-scroller-item"><a href="#about" class="page-scroller-link">約</a></li>
+					<li class="page-scroller-item"><a href="#ledger" class="page-scroller-link">Ledger</a></li>
 					<li class="page-scroller-item"><a href="#team" class="page-scroller-link">チーム</a></li>
 					<li class="page-scroller-item"><a href="#ambassadors" class="page-scroller-link">大使</a></li>
 					<li class="page-scroller-item"><a href="#news" class="page-scroller-link">ブログ</a></li>
 					<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">プロトコル</a></li>
-					<li class="page-scroller-item"><a href="#ledger" class="page-scroller-link">Ledger</a></li>
 					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">トークン買取</a></li>
 					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">道路地図</a></li>
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">社会的</a></li>
@@ -799,11 +799,11 @@
 				<ul class="page-scroller">
 					<li class="page-scroller-item"><a href="#main" class="page-scroller-link">主頁</a></li>
 					<li class="page-scroller-item"><a href="#about" class="page-scroller-link">約</a></li>
+					<li class="page-scroller-item"><a href="#ledger" class="page-scroller-link">Ledger</a></li>
 					<li class="page-scroller-item"><a href="#team" class="page-scroller-link">チーム</a></li>
 					<li class="page-scroller-item"><a href="#ambassadors" class="page-scroller-link">大使</a></li>
 					<li class="page-scroller-item"><a href="#news" class="page-scroller-link">ブログ</a></li>
 					<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">プロトコル</a></li>
-					<li class="page-scroller-item"><a href="#ledger" class="page-scroller-link">Ledger</a></li>
 					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">トークン買取</a></li>
 					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">道路地図</a></li>
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">社会的</a></li>
