--- a/kr/index.html
+++ b/kr/index.html
@@ -64,11 +64,11 @@
 				<ul class="page-scroller">
 					<li class="page-scroller-item"><a href="#main" class="page-scroller-link">집</a></li>
 					<li class="page-scroller-item"><a href="#about" class="page-scroller-link">약</a></li>
+					<li class="page-scroller-item"><a href="#ledger" class="page-scroller-link">Ledger</a></li>
 					<li class="page-scroller-item"><a href="#team" class="page-scroller-link">팀</a></li>
 					<li class="page-scroller-item"><a href="#ambassadors" class="page-scroller-link">대사</a></li>
 					<li class="page-scroller-item"><a href="#news" class="page-scroller-link">블로그</a></li>
 					<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">실험 계획안</a></li>
-					<li class="page-scroller-item"><a href="#ledger" class="page-scroller-link">Ledger</a></li>
 					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">토큰 판매</a></li>
 					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">로드맵</a></li>
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">소셜 네트워크</a></li>
@@ -191,16 +191,16 @@
 			<div class="box-bg-image" style="background-image: url(/images/ledger-bg-image.jpg);"><img src="" alt="/images/ledger-bg-image.jpg"></div>
 			<div class="page-scroller-wrapper">
 				<ul class="page-scroller">
-					<li class="page-scroller-item"><a href="#main" class="page-scroller-link">Home</a></li>
-					<li class="page-scroller-item"><a href="#about" class="page-scroller-link">About</a></li>
-					<li class="page-scroller-item"><a href="#team" class="page-scroller-link">Team</a></li>
-					<li class="page-scroller-item"><a href="#ambassadors" class="page-scroller-link">Ambassadors</a></li>
-					<li class="page-scroller-item"><a href="#news" class="page-scroller-link">Blog</a></li>
-					<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">Protocol</a></li>
+					<li class="page-scroller-item"><a href="#main" class="page-scroller-link">집</a></li>
+					<li class="page-scroller-item"><a href="#about" class="page-scroller-link">약</a></li>
 					<li class="page-scroller-item"><a href="#ledger" class="page-scroller-link">Ledger</a></li>
-					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">Tokensale</a></li>
-					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">Roadmap</a></li>
-					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">Social</a></li>
+					<li class="page-scroller-item"><a href="#team" class="page-scroller-link">팀</a></li>
+					<li class="page-scroller-item"><a href="#ambassadors" class="page-scroller-link">대사</a></li>
+					<li class="page-scroller-item"><a href="#news" class="page-scroller-link">블로그</a></li>
+					<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">실험 계획안</a></li>
+					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">토큰 판매</a></li>
+					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">로드맵</a></li>
+					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">소셜 네트워크</a></li>
 				</ul>
 			</div>
 			<section class="box box-table ledger" id="ledger">
@@ -220,11 +220,11 @@
 				<ul class="page-scroller">
 					<li class="page-scroller-item"><a href="#main" class="page-scroller-link">집</a></li>
 					<li class="page-scroller-item"><a href="#about" class="page-scroller-link">약</a></li>
+					<li class="page-scroller-item"><a href="#ledger" class="page-scroller-link">Ledger</a></li>
 					<li class="page-scroller-item"><a href="#team" class="page-scroller-link">팀</a></li>
 					<li class="page-scroller-item"><a href="#ambassadors" class="page-scroller-link">대사</a></li>
 					<li class="page-scroller-item"><a href="#news" class="page-scroller-link">블로그</a></li>
 					<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">실험 계획안</a></li>
-					<li class="page-scroller-item"><a href="#ledger" class="page-scroller-link">Ledger</a></li>
 					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">토큰 판매</a></li>
 					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">로드맵</a></li>
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">소셜 네트워크</a></li>
@@ -396,11 +396,11 @@
 				<ul class="page-scroller">
 					<li class="page-scroller-item"><a href="#main" class="page-scroller-link">집</a></li>
 					<li class="page-scroller-item"><a href="#about" class="page-scroller-link">약</a></li>
+					<li class="page-scroller-item"><a href="#ledger" class="page-scroller-link">Ledger</a></li>
 					<li class="page-scroller-item"><a href="#team" class="page-scroller-link">팀</a></li>
 					<li class="page-scroller-item"><a href="#ambassadors" class="page-scroller-link">대사</a></li>
 					<li class="page-scroller-item"><a href="#news" class="page-scroller-link">블로그</a></li>
 					<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">실험 계획안</a></li>
-					<li class="page-scroller-item"><a href="#ledger" class="page-scroller-link">Ledger</a></li>
 					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">토큰 판매</a></li>
 					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">로드맵</a></li>
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">소셜 네트워크</a></li>
@@ -482,11 +482,11 @@
 				<ul class="page-scroller">
 					<li class="page-scroller-item"><a href="#main" class="page-scroller-link">집</a></li>
 					<li class="page-scroller-item"><a href="#about" class="page-scroller-link">약</a></li>
+					<li class="page-scroller-item"><a href="#ledger" class="page-scroller-link">Ledger</a></li>
 					<li class="page-scroller-item"><a href="#team" class="page-scroller-link">팀</a></li>
 					<li class="page-scroller-item"><a href="#ambassadors" class="page-scroller-link">대사</a></li>
 					<li class="page-scroller-item"><a href="#news" class="page-scroller-link">블로그</a></li>
 					<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">실험 계획안</a></li>
-					<li class="page-scroller-item"><a href="#ledger" class="page-scroller-link">Ledger</a></li>
 					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">토큰 판매</a></li>
 					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">로드맵</a></li>
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">소셜 네트워크</a></li>
@@ -549,11 +549,11 @@
 				<ul class="page-scroller">
 					<li class="page-scroller-item"><a href="#main" class="page-scroller-link">집</a></li>
 					<li class="page-scroller-item"><a href="#about" class="page-scroller-link">약</a></li>
+					<li class="page-scroller-item"><a href="#ledger" class="page-scroller-link">Ledger</a></li>
 					<li class="page-scroller-item"><a href="#team" class="page-scroller-link">팀</a></li>
 					<li class="page-scroller-item"><a href="#ambassadors" class="page-scroller-link">대사</a></li>
 					<li class="page-scroller-item"><a href="#news" class="page-scroller-link">블로그</a></li>
 					<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">실험 계획안</a></li>
-					<li class="page-scroller-item"><a href="#ledger" class="page-scroller-link">Ledger</a></li>
 					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">토큰 판매</a></li>
 					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">로드맵</a></li>
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">소셜 네트워크</a></li>
@@ -616,11 +616,11 @@
 				<ul class="page-scroller">
 					<li class="page-scroller-item"><a href="#main" class="page-scroller-link">집</a></li>
 					<li class="page-scroller-item"><a href="#about" class="page-scroller-link">약</a></li>
+					<li class="page-scroller-item"><a href="#ledger" class="page-scroller-link">Ledger</a></li>
 					<li class="page-scroller-item"><a href="#team" class="page-scroller-link">팀</a></li>
 					<li class="page-scroller-item"><a href="#ambassadors" class="page-scroller-link">대사</a></li>
 					<li class="page-scroller-item"><a href="#news" class="page-scroller-link">블로그</a></li>
 					<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">실험 계획안</a></li>
-					<li class="page-scroller-item"><a href="#ledger" class="page-scroller-link">Ledger</a></li>
 					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">토큰 판매</a></li>
 					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">로드맵</a></li>
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">소셜 네트워크</a></li>
@@ -759,11 +759,11 @@
 				<ul class="page-scroller">
 					<li class="page-scroller-item"><a href="#main" class="page-scroller-link">집</a></li>
 					<li class="page-scroller-item"><a href="#about" class="page-scroller-link">약</a></li>
+					<li class="page-scroller-item"><a href="#ledger" class="page-scroller-link">Ledger</a></li>
 					<li class="page-scroller-item"><a href="#team" class="page-scroller-link">팀</a></li>
 					<li class="page-scroller-item"><a href="#ambassadors" class="page-scroller-link">대사</a></li>
 					<li class="page-scroller-item"><a href="#news" class="page-scroller-link">블로그</a></li>
 					<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">실험 계획안</a></li>
-					<li class="page-scroller-item"><a href="#ledger" class="page-scroller-link">Ledger</a></li>
 					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">토큰 판매</a></li>
 					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">로드맵</a></li>
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">소셜 네트워크</a></li>
@@ -800,11 +800,11 @@
 				<ul class="page-scroller">
 					<li class="page-scroller-item"><a href="#main" class="page-scroller-link">집</a></li>
 					<li class="page-scroller-item"><a href="#about" class="page-scroller-link">약</a></li>
+					<li class="page-scroller-item"><a href="#ledger" class="page-scroller-link">Ledger</a></li>
 					<li class="page-scroller-item"><a href="#team" class="page-scroller-link">팀</a></li>
 					<li class="page-scroller-item"><a href="#ambassadors" class="page-scroller-link">대사</a></li>
 					<li class="page-scroller-item"><a href="#news" class="page-scroller-link">블로그</a></li>
 					<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">실험 계획안</a></li>
-					<li class="page-scroller-item"><a href="#ledger" class="page-scroller-link">Ledger</a></li>
 					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">토큰 판매</a></li>
 					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">로드맵</a></li>
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">소셜 네트워크</a></li>
