--- a/jp/index.html
+++ b/jp/index.html
@@ -287,7 +287,7 @@
 									</div>
 									<a href="https://www.linkedin.com/in/pichugin-ruslan-170a9641/" target="_blank" class="team-icon"><img src="/images/linked-icon.png" alt=""></a>
 									<div class="team-name">Ruslan Pichugin</div>
-									<div class="team-type">CTO(Chief Strategy Officer)</div>
+									<div class="team-type">CSO (Chief Strategy Officer)</div>
 								</div>
 								<div class="team-slide">
 									<div class="team-image">
