--- a/kr/index.html
+++ b/kr/index.html
@@ -248,7 +248,7 @@
 									</div>
 									<a href="https://www.linkedin.com/in/alexander-kirvas-791306188/" target="_blank" class="team-icon"><img src="/images/linked-icon.png" alt=""></a>
 									<div class="team-name">Alexander Kirvas</div>
-									<div class="team-type">CEO (Chief Executive Officer)</div>
+									<div class="team-type">CEO Chief Executive Officer</div>
 								</div>
 								<div class="team-slide">
 									<div class="team-image">
@@ -264,7 +264,7 @@
 									</div>
 									<a href="https://www.linkedin.com/in/ongjunhao" target="_blank" class="team-icon"><img src="/images/linked-icon.png" alt=""></a>
 									<div class="team-name">ONG Jun Hao</div>
-									<div class="team-type">Business Development Advisor (Singapore)</div>
+									<div class="team-type">Business Development Advisor Singapore</div>
 								</div>
 								<div class="team-slide">
 									<div class="team-image">
@@ -272,7 +272,7 @@
 									</div>
 									<a href="https://www.linkedin.com/in/boris-dergachov-6945a9189/" target="_blank" class="team-icon"><img src="/images/linked-icon.png" alt=""></a>
 									<div class="team-name">Boris D</div>
-									<div class="team-type">СТО (Chief Technology Officer)</div>
+									<div class="team-type">СТО Chief Technology Officer</div>
 								</div>
 								<div class="team-slide">
 									<div class="team-image">
@@ -280,7 +280,7 @@
 									</div>
 									<a href="https://www.linkedin.com/in/alexrpro/" target="_blank" class="team-icon"><img src="/images/linked-icon.png" alt=""></a>
 									<div class="team-name">Alexander Richards</div>
-									<div class="team-type">Business Development Advisor (Korea)</div>
+									<div class="team-type">Business Development Advisor Korea</div>
 								</div>
 								<div class="team-slide">
 									<div class="team-image">
@@ -288,7 +288,7 @@
 									</div>
 									<a href="https://www.linkedin.com/in/pichugin-ruslan-170a9641/" target="_blank" class="team-icon"><img src="/images/linked-icon.png" alt=""></a>
 									<div class="team-name">Ruslan Pichugin</div>
-									<div class="team-type">CSO (Chief Strategy Officer)</div>
+									<div class="team-type">CSO Chief Strategy Officer</div>
 								</div>
 								<div class="team-slide">
 									<div class="team-image">
