--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
 									</div>
 									<a href="https://www.linkedin.com/in/alexander-kirvas-791306188/" target="_blank" class="team-icon"><img src="/images/linked-icon.png" alt=""></a>
 									<div class="team-name">Alexander Kirvas</div>
-									<div class="team-type">CEO (Chief Executive Officer)</div>
+									<div class="team-type">CEO Chief Executive Officer</div>
 								</div>
 								<div class="team-slide">
 									<div class="team-image">
@@ -263,7 +263,7 @@
 									</div>
 									<a href="https://www.linkedin.com/in/ongjunhao" target="_blank" class="team-icon"><img src="/images/linked-icon.png" alt=""></a>
 									<div class="team-name">ONG Jun Hao</div>
-									<div class="team-type">Business Development Advisor (Singapore)</div>
+									<div class="team-type">Business Development Advisor Singapore</div>
 								</div>
 								<div class="team-slide">
 									<div class="team-image">
@@ -271,7 +271,7 @@
 									</div>
 									<a href="https://www.linkedin.com/in/boris-dergachov-6945a9189/" target="_blank" class="team-icon"><img src="/images/linked-icon.png" alt=""></a>
 									<div class="team-name">Boris D</div>
-									<div class="team-type">СТО (Chief Technology Officer)</div>
+									<div class="team-type">СТО Chief Technology Officer</div>
 								</div>
 								<div class="team-slide">
 									<div class="team-image">
@@ -279,7 +279,7 @@
 									</div>
 									<a href="https://www.linkedin.com/in/alexrpro/" target="_blank" class="team-icon"><img src="/images/linked-icon.png" alt=""></a>
 									<div class="team-name">Alexander Richards</div>
-									<div class="team-type">Business Development Advisor (Korea)</div>
+									<div class="team-type">Business Development Advisor Korea</div>
 								</div>
 								<div class="team-slide">
 									<div class="team-image">
@@ -287,7 +287,7 @@
 									</div>
 									<a href="https://www.linkedin.com/in/pichugin-ruslan-170a9641/" target="_blank" class="team-icon"><img src="/images/linked-icon.png" alt=""></a>
 									<div class="team-name">Ruslan Pichugin</div>
-									<div class="team-type">CSO (Chief Strategy Officer)</div>
+									<div class="team-type">CSO Chief Strategy Officer</div>
 								</div>
 								<div class="team-slide">
 									<div class="team-image">
