--- a/kr/index.html
+++ b/kr/index.html
@@ -304,7 +304,7 @@
 									</div>
 									<!--<a href="" target="_blank" class="team-icon"><img src="/images/linked-icon.png" alt=""></a>-->
 									<div class="team-name">Eu Chan</div>
-									<div class="team-type">SMM manager</div>
+									<div class="team-type">Community Growth builder</div>
 								</div>
 							</div>
 						</div>
