--- a/index.html
+++ b/index.html
@@ -318,68 +318,49 @@
 					<h3 class="box-title-ann mtop ta-r">Ambassadors</h3>
 					<div class="team-container">
 						<div class="team-slider-wrapper">
-							<div class="team-slider team-list">
+							<div class="team-slider">
 								<div class="team-slide">
 									<div class="team-image">
-										<img src="/images/team-image-7.jpg" alt="">
+										<img src="/images/amb-image-1.png" alt="">
 									</div>
 									<a href="https://www.linkedin.com/in/reuben-godfrey/" target="_blank" class="team-icon"><img src="/images/linked-icon.png" alt=""></a>
 									<div class="team-name">Reuben Godfrey</div>
 								</div>
 								<div class="team-slide">
 									<div class="team-image">
-										<img src="/images/team-image-8.jpg" alt="">
+										<img src="/images/amb-image-4.png" alt="">
 									</div>
 									<a href="https://www.linkedin.com/in/adnanah/" target="_blank" class="team-icon"><img src="/images/linked-icon.png" alt=""></a>
 									<div class="team-name">Adnan Ahmed Siddiqui</div>
 								</div>
-								<!--
 								<div class="team-slide">
 									<div class="team-image">
-										<img src="/images/team-image-9.jpg" alt="">
-									</div>
-									<a href="https://www.linkedin.com/in/kilian-peter-krings-827298121/" target="_blank" class="team-icon"><img src="/images/linked-icon.png" alt=""></a>
-									<div class="team-name">Kilian Peter Krings</div>
-								</div>
-								-->
-								<div class="team-slide">
-									<div class="team-image">
-										<img src="/images/team-image-10.jpg" alt="">
+										<img src="/images/amb-image-5.png" alt="">
 									</div>
 									<a href="https://www.linkedin.com/in/deepanshubhatt/" target="_blank" class="team-icon"><img src="/images/linked-icon.png" alt=""></a>
 									<div class="team-name">Deepanshu Bhatt</div>
 								</div>
 								<div class="team-slide">
 									<div class="team-image">
-										<img src="/images/team-image-11.jpg" alt="">
+										<img src="/images/amb-image-3.png" alt="">
 									</div>
 									<a href="https://www.linkedin.com/in/vilniuscapital/" target="_blank" class="team-icon"><img src="/images/linked-icon.png" alt=""></a>
 									<div class="team-name">Anthony Johnson</div>
 								</div>
 								<div class="team-slide">
 									<div class="team-image">
-										<img src="/images/team-image-12.jpg" alt="">
+										<img src="/images/amb-image-6.png" alt="">
 									</div>
 									<a href="https://www.linkedin.com/in/jonnyfianu/" target="_blank" class="team-icon"><img src="/images/linked-icon.png" alt=""></a>
 									<div class="team-name">Jonathan Fianu</div>
 								</div>
 								<div class="team-slide">
 									<div class="team-image">
-										<img src="/images/team-image-13.jpg" alt="">
+										<img src="/images/amb-image-2.png" alt="">
 									</div>
 									<a href="https://www.linkedin.com/in/williambryant1/" target="_blank" class="team-icon"><img src="/images/linked-icon.png" alt=""></a>
 									<div class="team-name">Will Bryant</div>
 								</div>
-								<!--
-								<div class="team-slide">
-									<div class="team-image">
-										<img src="/images/team-image-17.jpg" alt="">
-									</div>
-									<a href="https://www.linkedin.com/in/max-bystrov-633487184/" target="_blank" class="team-icon"><img src="/images/linked-icon.png" alt=""></a>
-									<div class="team-name">Max B.</div>
-									<div class="team-type">Investor Relationship</div>
-								</div>
-								-->
 							</div>
 						</div>
 					</div>
