--- a/jp/index.html
+++ b/jp/index.html
@@ -187,7 +187,7 @@
 			</div>
 		</div>
 		<div class="colored-bg box-wrapper ledger-wrapper">
-			<div class="box-bg-image" style="background-image: url(/images/ledger-bg-image.jpg);"><img src="" alt="/images/ledger-bg-image.jpg"></div>
+			<div class="box-bg-image" style="background-image: url(/images/ledger-bg-image.jpg);"><img src="/images/ledger-bg-image.jpg" alt=""></div>
 			<div class="page-scroller-wrapper">
 				<ul class="page-scroller">
 					<li class="page-scroller-item"><a href="#main" class="page-scroller-link">主頁</a></li>
