--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 	<link rel="stylesheet" href="css/slick.css" media="all">
 	<link rel="stylesheet" href="css/jquery.fancybox.min.css" media="all">
-	<link rel="stylesheet" href="css/style.css?v29" media="all">
+	<link rel="stylesheet" href="css/style.css?v30" media="all">
 
 	<!-- <Google Tag Manager -->
 	<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
@@ -255,7 +255,7 @@
 									</div>
 									<a href="https://www.linkedin.com/in/jason-h-jang-21284615a" target="_blank" class="team-icon"><img src="/images/linked-icon.png" alt=""></a>
 									<div class="team-name">Jason H. Jang</div>
-									<div class="team-type">Chief information officer</div>
+									<div class="team-type">CIO Chief information officer</div>
 								</div>
 								<div class="team-slide">
 									<div class="team-image">
@@ -295,7 +295,7 @@
 									</div>
 									<a href="https://www.linkedin.com/in/julia-choi-b4a669189/" target="_blank" class="team-icon"><img src="/images/linked-icon.png" alt=""></a>
 									<div class="team-name">Julia Choi</div>
-									<div class="team-type">CMO</div>
+									<div class="team-type">CMO Chief Marketing Officer</div>
 								</div>
 								<div class="team-slide">
 									<div class="team-image">
@@ -1007,7 +1007,7 @@
 	<script src="js/slick.min.js"></script>
 	<script src="js/alfaNavbar.min.js"></script>
 	<script src="js/jquery.fancybox.min.js"></script>
-	<script src="js/scripts.js?v29"></script>
+	<script src="js/scripts.js?v30"></script>
 
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-135733690-1"></script>
