--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 	<link rel="stylesheet" href="css/slick.css" media="all">
 	<link rel="stylesheet" href="css/jquery.fancybox.min.css" media="all">
-	<link rel="stylesheet" href="css/style.css?v30" media="all">
+	<link rel="stylesheet" href="css/style.css?v31" media="all">
 
 	<!-- <Google Tag Manager -->
 	<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
@@ -72,6 +72,7 @@
 					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">Tokensale</a></li>
 					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">Roadmap</a></li>
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">Social</a></li>
+					<li class="page-scroller-item"><a href="#faq" class="page-scroller-link">Q&A</a></li>
 				</ul>
 			</div>
 			<div class="colored-bg-elements">
@@ -200,6 +201,7 @@
 					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">Tokensale</a></li>
 					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">Roadmap</a></li>
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">Social</a></li>
+					<li class="page-scroller-item"><a href="#faq" class="page-scroller-link">Q&A</a></li>
 				</ul>
 			</div>
 			<section class="box box-table ledger" id="ledger">
@@ -227,6 +229,7 @@
 					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">Tokensale</a></li>
 					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">Roadmap</a></li>
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">Social</a></li>
+					<li class="page-scroller-item"><a href="#faq" class="page-scroller-link">Q&A</a></li>
 				</ul>
 			</div>
 			<div class="colored-bg-elements">
@@ -384,6 +387,7 @@
 					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">Tokensale</a></li>
 					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">Roadmap</a></li>
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">Social</a></li>
+					<li class="page-scroller-item"><a href="#faq" class="page-scroller-link">Q&A</a></li>
 				</ul>
 			</div>
 			<div class="colored-bg-elements">
@@ -528,6 +532,7 @@
 					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">Tokensale</a></li>
 					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">Roadmap</a></li>
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">Social</a></li>
+					<li class="page-scroller-item"><a href="#faq" class="page-scroller-link">Q&A</a></li>
 				</ul>
 			</div>
 			<div class="colored-bg-elements">
@@ -614,6 +619,7 @@
 					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">Tokensale</a></li>
 					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">Roadmap</a></li>
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">Social</a></li>
+					<li class="page-scroller-item"><a href="#faq" class="page-scroller-link">Q&A</a></li>
 				</ul>
 			</div>
 			<section class="box box-table tokensale" id="tokensale">
@@ -681,6 +687,7 @@
 					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">Tokensale</a></li>
 					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">Roadmap</a></li>
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">Social</a></li>
+					<li class="page-scroller-item"><a href="#faq" class="page-scroller-link">Q&A</a></li>
 				</ul>
 			</div>
 			<div class="box-bg-image" style="background-image: url(/images/roadmap-image.png);"><img src="/images/roadmap-image-m.jpg"></div>
@@ -749,6 +756,7 @@
 					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">Tokensale</a></li>
 					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">Roadmap</a></li>
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">Social</a></li>
+					<li class="page-scroller-item"><a href="#faq" class="page-scroller-link">Q&A</a></li>
 				</ul>
 			</div>
 			<div class="colored-bg-elements">
@@ -790,6 +798,7 @@
 					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">Tokensale</a></li>
 					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">Roadmap</a></li>
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">Social</a></li>
+					<li class="page-scroller-item"><a href="#faq" class="page-scroller-link">Q&A</a></li>
 				</ul>
 			</div>
 			<section class="box box-table social" id="social">
@@ -851,6 +860,178 @@
 				<a href="https://t.me/pprotocol" class="bottom-panel-button"><span class="icon teleg-icon"></span></a>
 				<a href="/users/sign_up" class="button white moved-to-bottom-panel hide">Participate in pre-IEO</a>
 			</div>
+		</div>
+	</div>
+	<div class="top-gradient-bg box-wrapper">
+		<div class="page-scroller-wrapper">
+			<ul class="page-scroller">
+				<li class="page-scroller-item"><a href="#main" class="page-scroller-link">Home</a></li>
+				<li class="page-scroller-item"><a href="#about" class="page-scroller-link">About</a></li>
+				<li class="page-scroller-item"><a href="#ledger" class="page-scroller-link">Ledger</a></li>
+				<li class="page-scroller-item"><a href="#team" class="page-scroller-link">Team</a></li>
+				<li class="page-scroller-item"><a href="#ambassadors" class="page-scroller-link">Ambassadors</a></li>
+				<li class="page-scroller-item"><a href="#news" class="page-scroller-link">Blog</a></li>
+				<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">Protocol</a></li>
+				<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">Tokensale</a></li>
+				<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">Roadmap</a></li>
+				<li class="page-scroller-item"><a href="#social" class="page-scroller-link">Social</a></li>
+				<li class="page-scroller-item"><a href="#faq" class="page-scroller-link">Q&A</a></li>
+			</ul>
+		</div>
+		<section class="box box-table faq go-animate" id="faq">
+			<div class="box-cell">
+				<h2 class="box-title ta-r">
+					Q&A
+				</h2>
+				<div class="faq-list">
+					<div class="faq-list-title">Product Protocol</div>
+					<div class="faq-list-item">
+						<div class="faq-quest">What is Product Protocol? What is your aim?</div>
+						<div class="faq-answer">
+							<p>Product Protocol is an opensource protocol for crowdfunding/crowdlending campaigns based on digital assets issuing, integration with all business processes, funds management and financial operations.</p>
+							<p>Our aim is not only to tokenize businesses, but also to create value, bring customers and companies together guaranteeing profitability for both sides.</p>
+						</div>
+					</div>
+					<div class="faq-list-item">
+						<div class="faq-quest">How are you different from your competitors?</div>
+						<div class="faq-answer">
+							<p>We see our goal in revolutionizing the relationship between businesses and customers, improve process and benefits of tokenization for companies, as well as make investing in tokenized projects more profitable for investors. On our  blockchain assets desk, users do not just invest in projects by buying their tokens, but also receive services, products, and various bonuses.</p>
+						</div>
+					</div>
+					<div class="faq-list-item">
+						<div class="faq-quest">How can I use PPO token? Why do I need it?</div>
+						<div class="faq-answer">
+							<p>After the launch of blockchain assets desk our partnered businesses will regularly publish offers and lots. Without having PPO  tokens on your balance you cannot participate in voting and buy lots.</p>
+						</div>
+					</div>
+					<div class="faq-list-item">
+						<div class="faq-quest">In which countries are your offices located?</div>
+						<div class="faq-answer">
+							<p>Our company representatives are located in Germany and Korea.</p>
+						</div>
+					</div>
+					<div class="faq-list-item">
+						<div class="faq-quest">Businesses of what size are you mainly focused on?</div>
+						<div class="faq-answer">
+							<p>We are mostly focused on medium and small businesses. However we are ready to consider all offers and will be glad to see your company on our platform.</p>
+						</div>
+					</div>
+					<div class="faq-list-item">
+						<div class="faq-quest">How can businesses join your project?</div>
+						<div class="faq-answer">
+							<p>In order to join PProtocol as a business,  go to  <a href="https://pprotocol.io">https://pprotocol.io</a>, in Protocol section press “Connect your business” and fill out the form. We will shortly contact you back.</p>
+						</div>
+					</div>
+					<div class="faq-list-item">
+						<div class="faq-quest">In which jurisdiction is your company registered?</div>
+						<div class="faq-answer">
+							<p>Product Protocol OÜ is registtered in Estonia <br>Harju maakond, Tallinn, Kesklinna linnaosa,  Narva mnt 7-634, 1011</p>
+						</div>
+					</div>
+					<div class="faq-list-item">
+						<div class="faq-quest">Can PPO token be mined?</div>
+						<div class="faq-answer">
+							<p>No</p>
+						</div>
+					</div>
+					<div class="faq-list-item">
+						<div class="faq-quest">How can I buy your token?</div>
+						<div class="faq-answer">
+							<p>During the Pre-IEO you can purchase tokens on our website. Go to https://pprotocol.io, press “Participate in Pre-IEO” and follow the instructions to set up your account, where you’ll be able to buy tokens.</p>
+						</div>
+					</div>
+					<div class="faq-list-item">
+						<div class="faq-quest">Can I mine PPO token?</div>
+						<div class="faq-answer">
+							<p>No</p>
+						</div>
+					</div>
+				</div>	
+				<div class="faq-list">
+					<div class="faq-list-title">IEO</div>
+					<div class="faq-list-item">
+						<div class="faq-quest">What is an IEO?</div>
+						<div class="faq-answer">
+							<p>An Initial Exchange Offering is a token sale hold on an exchange. IEO works on different cryptocurrency exchanges depending on how it gets planned. The exchanges create a platform where the pool of developers can mint and sell the projects to crypto enthusiasts and investors!</p>
+						</div>
+					</div>
+					<div class="faq-list-item">
+						<div class="faq-quest">What currencies can I buy PPO with?</div>
+						<div class="faq-answer">
+							<p>During the Pre-IEO we accept BTC and ETH.</p>
+						</div>
+					</div>
+					<div class="faq-list-item">
+						<div class="faq-quest">What is the funds allocation after the  IEO?</div>
+						<div class="faq-answer">
+							<p>
+								Funds allocation is the following: 
+								<br>45% — Technology development 
+								<br>20% — Marketing and ecosystem
+								<br>20% — Reserves
+								<br>10% — Team and salaries 
+								<br>5% — Legal and administrative
+							</p>
+						</div>
+					</div>
+					<div class="faq-list-item">
+						<div class="faq-quest">What is the price of 1 PPO token?</div>
+						<div class="faq-answer">
+							<p>For now you can buy 1 PPO for 0,001 $ additionally getting special bonuses depending on the sum of your investment.</p>
+						</div>
+					</div>
+					<div class="faq-list-item">
+						<div class="faq-quest">Is the PPO token based on the Ethereum blockchain?</div>
+						<div class="faq-answer">
+							<p>No, we have own blockchain solution.</p>
+						</div>
+					</div>
+					<div class="faq-list-item">
+						<div class="faq-quest">Is there a minimum/maximum size of purchase?</div>
+						<div class="faq-answer">
+							<p>No</p>
+						</div>
+					</div>
+					<div class="faq-list-item">
+						<div class="faq-quest">Do you have softcap/hardcap?</div>
+						<div class="faq-answer">
+							<p>Our softcap is estimated at 5,000,000$. However we are on the negotiations stage with huge investors and therefore IEO might be closed before reaching it. So hurry up to get the best offer!</p>
+						</div>
+					</div>
+					<div class="faq-list-item">
+						<div class="faq-quest">Is there any assurance that your token won't lose its price in the future?</div>
+						<div class="faq-answer">
+							<p>After the IEO exchanges block certain amount of collected funds to maintain the price level. Also they support via own marketing activities.</p>
+						</div>
+					</div>
+				</div>	
+				<div class="faq-list">
+					<div class="faq-list-title">How to participate in IEO</div>
+					<div class="faq-list-item">
+						<div class="faq-quest">When will your IEO start?</div>
+						<div class="faq-answer">
+							<p>The start of IEO is scheduled for July 15.</p>
+						</div>
+					</div>
+					<div class="faq-list-item">
+						<div class="faq-quest">What is KYC and is it needed for the IEO?</div>
+						<div class="faq-answer">
+							<p><strong>KYC</strong> stands for “Know Your Customer” and is the process of a business identifying and verifying the identity of its clients.</p>
+							<p>As IEO is held on exchanges, all users there are obliged to complete KYC, otherwise in most cases they are not allowed to trade, or have other limitations.</p>
+						</div>
+					</div>
+					<div class="faq-list-item">
+						<div class="faq-quest">Is there a limitation on participants?</div>
+						<div class="faq-answer">
+							<p>No. Everybody who is over 18 can participate in PProtocol IEO.</p>
+						</div>
+					</div>
+				</div>					
+			</div>
+		</section>
+		<div class="bottom-panel">
+			<a href="https://t.me/pprotocol" class="bottom-panel-button"><span class="icon teleg-icon"></span></a>
+			<a href="/users/sign_up" class="button white moved-to-bottom-panel hide">Participate in pre-IEO</a>
 		</div>
 	</div>
 	<div class="footer-wrapper">
@@ -1007,7 +1188,7 @@
 	<script src="js/slick.min.js"></script>
 	<script src="js/alfaNavbar.min.js"></script>
 	<script src="js/jquery.fancybox.min.js"></script>
-	<script src="js/scripts.js?v30"></script>
+	<script src="js/scripts.js?v31"></script>
 
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-135733690-1"></script>
