--- a/kr/index.html
+++ b/kr/index.html
@@ -743,7 +743,6 @@
 				<a href="/users/sign_up" class="button white moved-to-bottom-panel hide">Participate in pre-IEO</a>
 			</div>
 		</div>
-		<!--
 		<div class="box-wrapper">
 			<div class="page-scroller-wrapper">
 				<ul class="page-scroller">
@@ -772,11 +771,11 @@
 					</h2>
 					<h3 class="box-title-ann ta-r">파트너</h3>
 					<div class="partners-list">
-						<div class="partners-list-item"><img src="/images/partner-image-5.png"></div>
-						<div class="partners-list-item"><img src="/images/partner-image-6.png"></div>
-						<div class="partners-list-item"><img src="/images/partner-image-7.png"></div>
-						<div class="partners-list-item"><img src="/images/partner-image-8.png"></div>
-						<div class="partners-list-item"><img src="/images/partner-image-9.png"></div>
+						<div class="partners-list-item"><img src="/images/partner-image-10.png"></div>
+						<div class="partners-list-item"><img src="/images/partner-image-11.png"></div>
+						<div class="partners-list-item"><img src="/images/partner-image-12.png"></div>
+						<div class="partners-list-item"><img src="/images/partner-image-13.png"></div>
+						<div class="partners-list-item"><img src="/images/partner-image-14.png"></div>
 					</div>
 				</div>
 			</section>
@@ -785,7 +784,6 @@
 				<a href="/users/sign_up" class="button white moved-to-bottom-panel hide">Participate in pre-IEO</a>
 			</div>
 		</div>
-		-->
 		<div class="colored-bg v4 box-wrapper">
 			<div class="page-scroller-wrapper">
 				<ul class="page-scroller">
@@ -882,7 +880,7 @@
 		<section class="box box-table faq go-animate" id="faq">
 			<div class="box-cell">
 				<h2 class="box-title ta-r">
-					Q&A
+					Q/A
 				</h2>
 				<div class="faq-list">
 					<div class="faq-list-title">Product Protocol</div>
